# glstudy

./: .gitignore  Cargo.toml
assets/shaders/: light.frag  light.vert  point.vert  point3d.vert  vertex_chromatic.frag  vertex_chromatic.vert  vertex_textured.frag  vertex_textured.vert
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: bindings.rs  lib.rs
src/: buffer.rs  camera.rs  domain.rs  entities.rs  frame_rate.rs  init.rs  main.rs  movement.rs  point.frag  point.vert  render_gl.rs  shader_program_container.rs  texture.rs  util.rs
src/entities/: data.rs  mesh.rs  mod.rs  vertex.rs
